[package]
authors = ["PyO3 Authors"]
name = "rustapi-module"
version = "0.1.0"
description = "A Python wrapper for the Rust API for purposes of testing"
edition = "2018"


[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3/"
tag = "v0.12.4"
features = ["extension-module"]

[lib]
name = "rustapi_module"
crate-type = ["cdylib"]
